--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,9 @@ version: 2
 
 workflows:
   version: 2
-  macos_build:
+  build:
     jobs:
       - macos_build
-  linux_build:
-    jobs:
       - linux_build
 
 jobs:
